[package]
name = "elephantine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env", "string"] }
clap-serde-derive = "0.2.1"
color-eyre = "0.6.3"
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.26"
nom = "7.1.3"
paste = "1.0.15"
serde = "1.0.218"
thiserror = "2.0.12"
toml = "0.8.20"
urlencoding = "2.1.3"
users = "0.11.0"

[dev-dependencies]
indoc = "2.0.6"

[build-dependencies]
built = { git = "https://github.com/lukaslueg/built", rev = "9468c3a117265cc5976bb82631861aa133f32aec" }

[lints.clippy]
all = "deny"
pedantic = "deny"
single_match_else = { level = "allow", priority = 1 }
enum_glob_use = { level = "allow", priority = 1 }
