[package]
name = "elephantine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.44", features = ["derive", "env", "string"] }
clap-serde-derive = "0.2.1"
color-eyre = "0.6.5"
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.27"
nom = "7.1.3"
paste = "1.0.15"
serde = "1.0.219"
thiserror = "2.0.12"
toml = "0.9.5"
urlencoding = "2.1.3"
users = "0.11.0"

[dev-dependencies]
indoc = "2.0.6"

[build-dependencies]
built = { version = "0.8.0", git = "https://github.com/triarius/built.git" }

[lints.clippy]
all = "deny"
pedantic = "deny"
enum_glob_use = { level = "allow", priority = 1 }
